@@ -138,6 +138,10 @@ Changes in Backwards Compatibility Policy
 
 API Changes
 
+* LUCENE-5725: MoreLikeThis#like now accetps multiple values per field.
+  The pre-existing method has been deprecated in favor of a variable arguments
+  for the like text. (Alex Ksikes via Simon Willnauer)
+
 * LUCENE-5711: MergePolicy accepts an IndexWriter instance
   on each method rather than holding state against a single
   IndexWriter instance. (Simon Willnauer)
